# learning_platform

./: db.sqlite3  manage.py  pyproject.toml
classroom/: forms.py  models.py  urls.py  views.py
classroom/migrations/: 0001_initial.py  0002_completedassignment.py  0003_rename_completed_on_completedassignment_timestamp.py  0004_assignment_completed_by.py
classroom/templates/: assignment_form.html  assignment_list.html  base.html  classroom_form.html  classroom_list.html  profile.html
classroom/templates/registration/: register.html
classroom_site/: asgi.py  settings.py  urls.py  wsgi.py
