[tool.poetry]
name = "classroom"
version = "0.1.0"
description = ""
authors = ["Alfarabi09 <fara2001@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
